@@ -19,7 +19,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 jar.compress=false
 javac.classpath=\
     ${reference.SoftSmithy.jar}:\
-    ${libs.jlfgr-1.0.classpath}
+    ${libs.jlfgr-1.0.classpath}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
